TEST: Added unit tests for map package